--- a/src/pages/buypass/buypass.html
+++ b/src/pages/buypass/buypass.html
@@ -1,16 +1,3 @@
-<!-- <ion-content class="animated fadeIn login auth-page">
-  <div class="login-content">
-      <ion-item>
-        <ion-label>Select Pass Type</ion-label>
-        <ion-select [(ngModel)]="pass" (change)="onChange(pass)">
-          <ion-option value="d">Daily Pass</ion-option>
-          <ion-option value="m">Monthly Pass</ion-option>
-          <ion-option value="s">Student Pass</ion-option>
-          <ion-option value="o">Other Pass</ion-option>
-        </ion-select>
-      </ion-item>
-  </div>
-</ion-content> -->
 <ion-header>
   <ion-navbar color="primary">
     <button ion-button menuToggle>
@@ -36,23 +23,20 @@
     <ion-row>
       <ion-col width-50 offset-25> -->
 
-  <div  *ngIf="passtype" >    
-  <ion-list *ngFor="let passtypedt of passtype">
-    <ion-item item-start>
+  <div *ngIf="passtype">
+    <ion-list *ngFor="let pass of passtype">
+      <ion-item item-start (click)="tapEvent()">
         <!-- <ion-icon item-start></ion-icon> -->
-            {{passtypedt.pd_type}}
-        <ion-note item-end>
-            {{passtypedt.price}}
+        {{pass.pd_type}}
+        <ion-note ion-text color="primary" item-end>
+          Rs:{{pass.price}}
         </ion-note>
       </ion-item>
-    <!-- <ion-item>
+      <!-- <ion-item>
       <button ion-button icon-end>
         Buy
       </button>
     </ion-item> -->
-  </ion-list>
-</div>
-  <!-- </ion-col>
-    </ion-row>
-  </ion-grid> -->
+    </ion-list>
+  </div>
 </ion-content>
