--- a/src/pages/buyticket/buyticket.html
+++ b/src/pages/buyticket/buyticket.html
@@ -3,9 +3,10 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Buy Bus Pass</ion-title>
+    <ion-title>Buy Bus Ticket</ion-title>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding class="animated fadeIn common-bg">
 
 </ion-content>
