--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -41,7 +41,7 @@
         </ion-label>
         <ion-input type="text" [(ngModel)]="user.password" name="password" required></ion-input>
       </ion-item>
-      <button color="positive" [disabled]="!formCtrl.form.valid" ion-button block (click)="signUp()">Register</button>
+      <button color="positive" [disabled]="!formCtrl.form.valid" ion-button block (click)="signUp()">Sign Up</button>
     </form>
       <!-- Other links -->
     <div text-center margin-top>
