--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -13,7 +13,7 @@
     <img [src]="user.avatar" />
     <ion-card-content>
       <ion-card-title>{{user.first_name}}</ion-card-title>
-      <ion-card-title>{{user.useremail}}</ion-card-title>
+      <ion-card-title>{{user.user_email}}</ion-card-title>
       <p>
         {{user.user_address}}
       </p>
