--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,12 +10,12 @@
 
 <ion-content padding class="animated fadeIn common-bg">
   <ion-card>
-    <img [src]="user.avatar" />
+    <!-- <img [src]="user.avatar" /> -->
     <ion-card-content>
-      <ion-card-title>{{user.first_name}}</ion-card-title>
-      <ion-card-title>{{user.user_email}}</ion-card-title>
+      <ion-card-title>{{user.fullname}}</ion-card-title>
+      <ion-card-title>{{user.email}}</ion-card-title>
       <p>
-        {{user.user_address}}
+        {{user.mob}}
       </p>
     </ion-card-content>
   </ion-card>
