--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -9,12 +9,6 @@
 <ion-content padding class="animated fadeIn common-bg">
   <form #formCtrl="ngForm" class="list-form">
     <ion-item>
-      <ion-label fixed>AVATAR</ion-label>
-      <ion-avatar item-end>
-        <img src="{{imgPreview}}" (click)="getPhoto()">
-      </ion-avatar>
-    </ion-item>
-    <ion-item>
       <ion-label floating>
         First Name
       </ion-label>
@@ -50,6 +44,18 @@
         Address
       </ion-label>
       <ion-input type="text" [(ngModel)]="user.address" name="address" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label >Upload Photo</ion-label>
+      <ion-avatar item-end>
+        <img src="{{imgPreview1}}" (click)="getPhoto()">
+      </ion-avatar>
+    </ion-item>
+    <ion-item>
+      <ion-label >Upload Sign</ion-label>
+      <ion-avatar item-end>
+        <img src="{{imgPreview2}}" (click)="getSign()">
+      </ion-avatar>
     </ion-item>
 
     <button color="positive" [disabled]="!formCtrl.form.valid" ion-button block (click)="saveData()">Create ID card</button>
