--- a/src/pages/buyticket/buyticket.html
+++ b/src/pages/buyticket/buyticket.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content padding class="animated fadeIn common-bg">
-
+        <img src="../assets/img/comingsoon.png">
 </ion-content>
