--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -52,7 +52,7 @@
       </ion-avatar>
     </ion-item>
     <ion-item>
-      <ion-label >Upload Sign</ion-label>
+      <ion-label >Upload Signature</ion-label>
       <ion-avatar item-end>
         <img src="{{imgPreview2}}" (click)="getSign()">
       </ion-avatar>
