--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,7 +11,7 @@
       <ion-item>
         <ion-label floating>
           <ion-icon name="person" item-start class="text-primary"></ion-icon>
-          Username
+          Email ID
         </ion-label>
         <ion-input type="text" name="username" [(ngModel)]="user.username" autocapitalize="off" required></ion-input>
       </ion-item>
